# haskell-for-gread-good

./: .cabal  Setup.hs  hw1.hs  learnhaskell.cabal
src/: FoldFunctions.hs  List.hs  QuickSort.hs  RPN.hs  Shape.hs  Simple.hs  Tree.hs  hw1.hs
test/: MainTestSuite.hs  QuickSortTest.hs  SimpleTest.hs  Tetst.hs
