Name:                    learnhaskell
Version:                 0.1
Description:             Learn Haskell
License:                 GPL
Author:                  Iurii Susuk
Maintainer:              yurasusuk@gmail.com
Build-Type:              Simple
Cabal-Version:           >=1.8

Library
    Hs-Source-Dirs:      src
    Exposed-Modules:     Simple
    Build-Depends:       base == 4.*
    GHC-Options:         -Wall

test-suite simple-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests, src
  main-is:          MainTestSuite.hs
  build-depends:    base,
                    HUnit,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck