Name:                    learnhaskell
Version:                 0.1
Description:             Learn Haskell
License:                 GPL
Author:                  Iurii Susuk
Maintainer:              yurasusuk@gmail.com
Build-Type:              Simple
Cabal-Version:           >=1.8
tested-with:             GHC>=7.6.3

Library
    Hs-Source-Dirs:      src
    Exposed-Modules:     Simple
    Build-Depends:       base == 4.*
    GHC-Options:         -Wall

Test-Suite simple-tests
    Type:                exitcode-stdio-1.0
    Hs-Source-Dirs:      test, src
    Main-is:             MainTestSuite.hs
    Build-Depends:       base,
                         HUnit, 
                         QuickCheck,
                         test-framework,
                         test-framework-hunit,
                         test-framework-quickcheck2